--- a/wp-content/themes/onepress/style.css
+++ b/wp-content/themes/onepress/style.css
@@ -389,7 +389,8 @@ fieldset {
 
 input[type="reset"], input[type="submit"], input[type="submit"] {
 	cursor: pointer;
-	background: #03c4eb;
+	/*background: #03c4eb;*/
+	background: #ec1a23;
 	border: none;
 	display: inline-block;
 	color: #FFFFFF;
@@ -701,7 +702,7 @@ h6, p, ul, ol, dl, blockquote, pre {
 	line-height: 75px;
 	position: relative;
 	width: 100%;
-	background: #FFFFFF;
+	background: rgba(255, 255, 255, 0.95);
 	z-index: 99;
 	-webkit-transition: all 1s ease-out;
 	/* Safari */
@@ -957,16 +958,34 @@ h6, p, ul, ol, dl, blockquote, pre {
 	zoom: 1;
 	letter-spacing: 1px;
 }
+/*.onepress-menu a {
+	color: #090fef;
+	font-family: "Raleway", Helvetica, Arial, sans-serif;
+	padding-left: 17px;
+	padding-right: 17px;
+	font-size: 13px;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-decoration: none;
+	zoom: 1;
+	letter-spacing: 1px;
+}*/
 
-.onepress-menu a:hover {
+/*Trung Modify*/
+/* .onepress-menu a:hover {
 	color: #03c4eb;
+} */
+.onepress-menu a:hover {
+	color: #ffffff;
+	background-color:#1994e2;
+
 }
 
 .onepress-menu ul li {
 	line-height: 26px;
 }
 
-.onepress-menu ul li a {
+/*.onepress-menu ul li a {
 	border-top: 1px solid #e9e9e9;
 	padding: 8px 18px;
 	color: #999999;
@@ -974,19 +993,33 @@ h6, p, ul, ol, dl, blockquote, pre {
 	text-transform: none;
 	background: #ffffff;
 	letter-spacing: 0;
+}*/
+
+/*Trung Modify*/
+.onepress-menu ul li a {
+	border-top: 1px solid #e9e9e9;
+	padding: 8px 18px;
+	color: #000;
+	font-size: 14.5px;
+	font-weight:450;
+	text-transform: none;
+	background: rgba(249, 246, 246, 0.7);
+	letter-spacing: 0;
 }
 
+/*.onepress-menu ul li a:hover {
+	color: #03c4eb;
+}*/
+/*Trung Modify*/
 .onepress-menu ul li a:hover {
-	color: #03c4eb;
+	color: #ffffff;
+	background-color:#1994e2;
+
 }
 
-.onepress-menu li.onepress-current-item > a {
+/*.onepress-menu li.onepress-current-item > a {
 	color: #03c4eb;
-}
-
-.onepress-menu ul li.current-menu-item > a {
-	color: #03c4eb;
-}
+}*/
 
 .onepress-menu > li:last-child > a {
 	padding-right: 0px;
@@ -1212,9 +1245,15 @@ h6, p, ul, ol, dl, blockquote, pre {
 
 /* Footer
 ------------------------------*/
-.site-footer {
+/*Trung - adjust footer background color*/
+/*.site-footer {
 	background: #111111;
 	color: #BBBBBB;
+	font-size: 14px;
+}*/
+.site-footer {
+	background: linear-gradient(rgb(228, 8, 8),#150b01);
+	color: #f8f8f8;
 	font-size: 14px;
 }
 
@@ -1320,13 +1359,22 @@ h6, p, ul, ol, dl, blockquote, pre {
 	color: #03c4eb;
 }
 
-.site-footer .site-info {
+/*Trung-adjust background and text color*/
+/*.site-footer .site-info {
 	position: relative;
 	text-align: center;
 	padding: 35px 0px;
 	background: #222222;
 	font-weight: 500;
 	color: #bbbbbb;
+}*/
+.site-footer .site-info {
+	position: relative;
+	text-align: center;
+	padding: 35px 0px;
+	background: #111111;
+	font-weight: 500;
+	color: #ffffff;
 }
 
 .site-footer .site-info a {
@@ -3787,7 +3835,8 @@ img.mfp-img {
 }
 
 .woocommerce #respond input#submit, .woocommerce a.button, .woocommerce button.button, .woocommerce input.button, .woocommerce button.button.alt {
-	background-color: #03c4eb;
+	/*background-color: #03c4eb;*/
+	background-color: #ec1a23;
 	padding: 10px 20px;
 	padding:  0.625rem 1.25rem;
 	color: #FFF;
@@ -4093,3 +4142,45 @@ img.mfp-img {
 .owl-carousel .owl-buttons .owl-next .lg-icon::before {
 	content: "\e095";
 }
+
+/*Trung Starts - Add CSS*/
+/*#footer-sidebar {
+display:block;
+height: 250px;
+}*/
+#footer-sidebar {display:block;height: 369px;padding: 15px;}
+
+#footer-sidebar1 {float: left;width: 340px;margin-left:5px;margin-right:5px;padding-left: 25px;padding-top: 5px;}
+
+#footer-sidebar2 {float: left;width: 55%;margin-top: 10px;margin-left: 20px;margin-right: 10px;font-size: 17.5px;}
+
+/*#footer-sidebar2 {
+float: left;
+width: 340px;
+margin-left:5px;
+margin-right:5px;
+}*/
+
+#footer-sidebar3 {
+	float: right;
+	width: 15%;
+	margin-left:5px;
+	margin-right:5px;
+}	
+#footer-sidebar3 img{
+	border-style:double;
+	border-width:1.5px;
+}
+#sidebar-doitac-cuahang img {
+	border-style:groove;
+	border-width:1.5px;
+}
+/*custom font-weight by id added new in small text hero content*/
+#small-text-hero-id {
+	font-weight:400;
+}
+/*Add border img logo page gioi thieu*/
+#gioithieu-page-logo img {
+	border-style:groove;
+}
+/*Trung Ends - Add CSS*/
